--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SendNotificationActivity"></activity>
+        <activity android:name=".activities.SendNotificationActivity" />
         <activity android:name=".activities.ViewProfileActivity" />
         <activity android:name=".fragments.tpo.tpo.ViewUploadsActivity" />
         <activity android:name=".activities.CompanyActivity" />
@@ -41,6 +41,10 @@
 
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.ChangePasswordActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
