--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SendNotificationActivity" />
+        <activity android:name=".fragments.tpo.tpo.SendNotificationActivity" />
         <activity android:name=".activities.ViewProfileActivity" />
         <activity android:name=".fragments.tpo.tpo.ViewUploadsActivity" />
         <activity android:name=".activities.CompanyActivity" />
@@ -32,12 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service android:name=".service.MyFirebaseMessagingService">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
 
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.ChangePasswordActivity" />
